--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "exceljs": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "streamifier": "^0.1.1",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
