progress implementing local model for thematic analysis

--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
-    "@huggingface/inference": "^3.6.2",
+    "@huggingface/transformers": "^3.4.1",
     "@tailwindcss/vite": "^4.0.6",
     "better-sqlite3": "^11.8.1",
     "dotenv": "^16.4.7",
     "electron-store": "^10.0.1",
     "exceljs": "^4.4.0",
+    "onnxruntime-node": "^1.21.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^4.0.6"
