I add a button on the About Page where they can download the user manual

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "exceljs": "^4.4.0",
     "onnxruntime-node": "^1.21.0",
     "react": "^18.2.0",
+    "react-doc-viewer": "^0.1.14",
     "react-dom": "^18.2.0",
     "tailwindcss": "^4.0.6"
   },
