--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ node_modules
 venv/
 .venv/
 
+# Embedded python environment
+src/python/Lib/*
+src/python/Scripts/*
+
 # Python cache
 __pycache__
 src/utils/__pycache__/
